// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render <Button /> same with snapshop 1`] = `
.c0 {
  font-size: 25px;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  position: relative;
  background-position-x: center;
  background-position-y: center;
  background: url() no-repeat;
  background-size: cover;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`<Button /> should render wrapped button 1`] = `
.c1 {
  font-size: 25px;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  position: relative;
  background-position-x: center;
  background-position-y: center;
  background: url() no-repeat;
  background-size: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 32px;
  height: 55px;
  width: 183px;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      버튼
    </button>
  </div>
</div>
`;
